fix animecard clipping dropdown

--- a/src/components/animeCard/animeCard.css
+++ b/src/components/animeCard/animeCard.css
@@ -12,8 +12,6 @@
 	margin-top: 1rem;
 	margin-bottom: 1rem;
 
-	overflow-y: hidden;
-
 	--cardHeight: 16.5rem;
 	--cardBorderRadius: max(5px, 3dvw);
 	--colSecondaryTrans: rgb(from var(--colSecondary) r g b / 0.6);
@@ -29,6 +27,7 @@
 	padding-top: 0;
 	padding-bottom: 0;
 	opacity: 0;
+	overflow-y: hidden;
 }
 
 @keyframes justAddedAnim {
@@ -42,6 +41,7 @@
 
 .card.toRemove {
 	animation: toRemoveAnim 0.5s forwards;
+	overflow-y: hidden;
 }
 
 @keyframes toRemoveAnim {
